portal_backend/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-backend-deployment
  labels:
    app: portal-backend
  namespace: auth0
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: portal-backend
  template:
    metadata:
      labels:
        app: portal-backend
    spec:
      containers:
        - image: tororomeshi/portal-backend:latest
          name: portal-backend
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
