portal_backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend-service
  namespace: auth0
  name: portal-backend-service
spec:
  type: ClusterIP
  selector:
    app: portal-backend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
